# community/community-server/config/routes.js
@@ -35,6 +35,9 @@ module.exports.routes = {
 
   '/': { view: 'pages/homepage' },
 
+  'POST /api/v1/repository': { action: 'repository' },
+
+
 
   /***************************************************************************
   *                                                                          *
